# Smart-Inventory

./: README.md  pyproject.toml
core/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/api/: api.js
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Home.jsx  InventoryManager.jsx  Login.jsx  OrderSystem.jsx
inventory/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
inventory/migrations/: 0001_initial.py  0002_rename_prize_to_price.py
inventory/services/: order_service.py
